--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -43,6 +43,40 @@
       "metadata": {
         "id": "eio8M7_xm8Ki"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*italicized text*# New Section"
+      ],
+      "metadata": {
+        "id": "NY0CgbSGnI8z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**bold text**# New Section1"
+      ],
+      "metadata": {
+        "id": "0cByoWfhnNNO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# New Section"
+      ],
+      "metadata": {
+        "id": "dD00Q3vHnTvN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "uKtEjgEwnWB4"
+      }
     }
   ]
 }
